--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\LookWhosEditingNow\packages.config" />
+  <repository path="..\LookWhosEditingToo\packages.config" />
   <repository path="..\TestSite\packages.config" />
 </repositories>
