--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,6 @@ www/App_Data/umbraco.config
 !/BuildPackages/Tools/MSBuildNugetTasks/*
 !/BuildPackages/Tools/MSBuildUmbracoTasks/*
 
-TestSite/App_Data/Logs/
-TestSite/App_Data/cache/
+src/TestSite/App_Data/Logs/
+src/TestSite/App_Data/cache/
+src/TestSite/App_Data/TEMP/*
