--- a/src/LookWhosEditingToo/LookWhosEditingToo.csproj
+++ b/src/LookWhosEditingToo/LookWhosEditingToo.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="UmbracoStartUp.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Plugins\LookWhosEditingToo\package.manifest" />
