--- a/src/LookWhosEditingToo/LookWhosEditingToo.csproj
+++ b/src/LookWhosEditingToo/LookWhosEditingToo.csproj
@@ -297,6 +297,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\EditApiController.cs" />
+    <Compile Include="Controllers\PublicEditApiController.cs" />
     <Compile Include="EditingHub.cs" />
     <Compile Include="Models\Edit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
