Some more fiddling

--- a/src/TestSite/App_Data/umbraco.config
+++ b/src/TestSite/App_Data/umbraco.config
@@ -706,8 +706,17 @@
 }]]></content>
       </TextPage>
     </LandingPage>
-    <LandingPage id="1068" key="d94fe77a-57c1-425b-9c65-0144b6efea96" parentID="1063" level="2" creatorID="0" sortOrder="1" createDate="2015-09-30T13:36:05" updateDate="2015-09-30T13:36:08" nodeName="Explore" urlName="explore" path="-1,1063,1068" isDoc="" nodeType="1061" creatorName="Tim Geyssens" writerName="Tim Geyssens" writerID="0" template="1057" nodeTypeAlias="LandingPage">
+    <LandingPage id="1068" key="d94fe77a-57c1-425b-9c65-0144b6efea96" parentID="1063" level="2" creatorID="0" sortOrder="1" createDate="2015-09-30T13:36:05" updateDate="2015-10-02T12:12:34" nodeName="Explore" urlName="explore" path="-1,1063,1068" isDoc="" nodeType="1061" creatorName="Tim Geyssens" writerName="Tim Geyssens" writerID="0" template="1057" nodeTypeAlias="LandingPage">
       <umbracoNaviHide>0</umbracoNaviHide>
+      <content><![CDATA[{
+  "name": "1 column layout",
+  "sections": [
+    {
+      "grid": 12,
+      "rows": []
+    }
+  ]
+}]]></content>
       <TextPage id="1069" key="66096ccd-0901-4a9c-988b-5842f4d8838b" parentID="1068" level="3" creatorID="0" sortOrder="0" createDate="2015-09-30T13:36:05" updateDate="2015-09-30T13:36:09" nodeName="Our Umbraco" urlName="our-umbraco" path="-1,1063,1068,1069" isDoc="" nodeType="1062" creatorName="Tim Geyssens" writerName="Tim Geyssens" writerID="0" template="1057" nodeTypeAlias="TextPage">
         <content><![CDATA[{
   "name": "1 column layout",
