--- a/src/TestSite/App_Data/umbraco.config
+++ b/src/TestSite/App_Data/umbraco.config
@@ -312,8 +312,17 @@
     }
   ]
 }]]></content>
-    <LandingPage id="1060" key="7a02734c-da89-439f-b91f-f686e24377ab" parentID="1059" level="2" creatorID="0" sortOrder="0" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T13:11:35" nodeName="Learn" urlName="learn" path="-1,1059,1060" isDoc="" nodeType="1057" creatorName="admin@admin.com" writerName="admin@admin.com" writerID="0" template="1053" nodeTypeAlias="LandingPage">
+    <LandingPage id="1060" key="7a02734c-da89-439f-b91f-f686e24377ab" parentID="1059" level="2" creatorID="0" sortOrder="0" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T20:57:18" nodeName="Learn" urlName="learn" path="-1,1059,1060" isDoc="" nodeType="1057" creatorName="admin1" writerName="admin1" writerID="0" template="1053" nodeTypeAlias="LandingPage">
       <umbracoNaviHide>0</umbracoNaviHide>
+      <content><![CDATA[{
+  "name": "1 column layout",
+  "sections": [
+    {
+      "grid": 12,
+      "rows": []
+    }
+  ]
+}]]></content>
       <TextPage id="1061" key="e54e12d6-204d-4f17-8f8e-be9495119d39" parentID="1060" level="3" creatorID="0" sortOrder="0" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T13:11:35" nodeName="The starter kit" urlName="the-starter-kit" path="-1,1059,1060,1061" isDoc="" nodeType="1058" creatorName="admin@admin.com" writerName="admin@admin.com" writerID="0" template="1053" nodeTypeAlias="TextPage">
         <content><![CDATA[{
   "name": "1 column layout",
@@ -1239,7 +1248,7 @@
 }]]></content>
       </TextPage>
     </LandingPage>
-    <LandingPage id="1068" key="7d3113aa-fd44-403b-bec5-7a6cc58c63b5" parentID="1059" level="2" creatorID="0" sortOrder="2" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T17:40:09" nodeName="Extend" urlName="extend" path="-1,1059,1068" isDoc="" nodeType="1057" creatorName="admin1" writerName="admin1" writerID="0" template="1053" nodeTypeAlias="LandingPage">
+    <LandingPage id="1068" key="7d3113aa-fd44-403b-bec5-7a6cc58c63b5" parentID="1059" level="2" creatorID="0" sortOrder="2" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T23:07:28" nodeName="Extend" urlName="extend" path="-1,1059,1068" isDoc="" nodeType="1057" creatorName="admin1" writerName="admin1" writerID="0" template="1053" nodeTypeAlias="LandingPage">
       <umbracoNaviHide>0</umbracoNaviHide>
       <content><![CDATA[{
   "name": "1 column layout",
@@ -1569,7 +1578,7 @@
 }]]></content>
       </TextPage>
     </LandingPage>
-    <BlogPostRepository id="1071" key="128fa5f8-1fbd-4b17-b057-c2411974db53" parentID="1059" level="2" creatorID="0" sortOrder="3" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T13:11:35" nodeName="Blog" urlName="blog" path="-1,1059,1071" isDoc="" nodeType="1055" creatorName="admin@admin.com" writerName="admin@admin.com" writerID="0" template="1050" nodeTypeAlias="BlogPostRepository">
+    <BlogPostRepository id="1071" key="128fa5f8-1fbd-4b17-b057-c2411974db53" parentID="1059" level="2" creatorID="0" sortOrder="3" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T21:41:50" nodeName="Blog" urlName="blog" path="-1,1059,1071" isDoc="" nodeType="1055" creatorName="admin1" writerName="admin2" writerID="1" template="1050" nodeTypeAlias="BlogPostRepository">
       <umbracoNaviHide>1</umbracoNaviHide>
       <BlogPost id="1072" key="da729c8f-4cd9-4f4b-a363-05fe41a7546b" parentID="1071" level="3" creatorID="0" sortOrder="0" createDate="2016-07-16T13:11:34" updateDate="2016-07-16T13:11:35" nodeName="Tall trees have deep roots" urlName="tall-trees-have-deep-roots" path="-1,1059,1071,1072" isDoc="" nodeType="1054" creatorName="admin@admin.com" writerName="admin@admin.com" writerID="0" template="1051" nodeTypeAlias="BlogPost">
         <content><![CDATA[{
