--- a/src/TestSite/Web.config
+++ b/src/TestSite/Web.config
@@ -51,8 +51,8 @@
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
-    <add name="umbracoDbDSN" connectionString="server=kariti;database=lookwhosediting;user id=umbraco;password=123456" providerName="System.Data.SqlClient" />
-    <!--<add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />-->
+    <!--<add name="umbracoDbDSN" connectionString="server=kariti;database=lookwhosediting;user id=umbraco;password=123456" providerName="System.Data.SqlClient" />-->
+    <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
